2007-11-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (playlist_show_popup_menu),
	(playlist_remove_files), (totem_playlist_save_files),
	(totem_playlist_move_files), (treeview_row_changed),
	(totem_playlist_clear), (totem_playlist_set_previous),
	(totem_playlist_class_init): Patch from Kamil Pawlowski
	<kamilpe@gmail.com> to disable the "Select text subtitle" menu entry
	if multiple files are selected (Closes: #499462)

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/totem.desktop.in.in.in: Add some extra keys, pointing to the
	documentation, and listing other binaries for automated crash
	reporting.

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* README: Fix some capitalisation issues in the readme.

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* bindings/python/totem.defs:
	* src/plugins/mythtv/totem-mythtv.c: (create_treeview):
	* src/plugins/tracker/totem-tracker-widget.c:
	(initialize_list_store):
	* src/plugins/youtube/youtube.py:
	* src/totem-cell-renderer-video.c: (totem_cell_renderer_video_new),
	(totem_cell_renderer_video_class_init),
	(totem_cell_renderer_video_init),
	(totem_cell_renderer_video_set_property),
	(totem_cell_renderer_video_get_property), (get_size),
	(totem_cell_renderer_video_render):
	* src/totem-cell-renderer-video.h:
	* src/totem-video-list.c: (totem_video_list_get_property): Render
	a placeholder image instead of a video thumbnail in
	TotemCellRendererVideo if a thumbnail isn't available, and enable
	this for YouTube, Tracker and MythTV plugins. (Closes: #499407)

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/Makefile.am:
	* data/video-list.ui:
	* src/totem-video-list.c: (totem_video_list_new),
	(totem_video_list_init), (totem_video_list_dispose),
	(show_popup_menu), (button_pressed_cb), (popup_menu_cb),