@@ -1393,22 +1393,6 @@
 		      <property name="spacing">6</property>
 
 		      <child>
-			<object class="GtkImage" id="image7">
-			  <property name="visible">True</property>
-			  <property name="icon-name">stock_contrast</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</object>
-			<packing>
-			  <property name="padding">0</property>
-			  <property name="expand">False</property>
-			  <property name="fill">True</property>
-			</packing>
-		      </child>
-
-		      <child>
 			<object class="GtkLabel" id="tpw_color_balance_label">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">Color Balance</property>
