@@ -1,3 +1,8 @@
+2007-11-28  Andreas Nilsson  <nisses.mail@home.se>
+
+	* data/totem.ui: removed icon in front of Color balance slider
+	fixes #499730
+
 2007-11-26  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-playlist.c: (playlist_show_popup_menu),
